--- a/FBLA/pom.xml
+++ b/FBLA/pom.xml
@@ -229,7 +229,7 @@
             <!-- Production mode is activated using -Pproduction -->
             <id>production</id>
             <properties>
-                <vaadin.productionMode>true</vaadin.productionMode>
+                <vaadin.productionMode>false</vaadin.productionMode>
             </properties>
             <dependencies>
                 <dependency>
@@ -292,6 +292,5 @@
                 </plugins>
             </build>
         </profile>
-
     </profiles>
 </project>
