--- a/FBLA/src/main/resources/application.properties
+++ b/FBLA/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8080
 # Ensure application is run in Vaadin 14/npm mode
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
