Cleaned up Classes and Removed Unnecessary files

--- a/FBLA/src/main/resources/application.properties
+++ b/FBLA/src/main/resources/application.properties
@@ -3,4 +3,6 @@ server.port=8080
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL9Dialect
+
 
