--- a/FBLA_Full/src/main/resources/application.properties
+++ b/FBLA_Full/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
-security.basic.enabled=false
 server.tomcat.uri-encoding=UTF-8
 spring.jackson.serialization.write_dates_as_timestamps=false
+spring.jpa.hibernate.ddl-auto=update
 # Comment out if using anything else than H2 (e.g. MySQL or PostgreSQL)
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Uncomment if using PostgreSQL
 #spring.jpa.hibernate.ddl-auto=create
@@ -16,4 +16,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.org.atmosphere = warn
 
 # Ensure application is run in Vaadin 14/npm mode
-vaadin.compatibilityMode = false
+#vaadin.compatibilityMode = false
