--- a/FBLA/src/main/resources/application.properties
+++ b/FBLA/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 server.port=8080
 # Ensure application is run in Vaadin 14/npm mode
-vaadin.compatibilityMode = false
-logging.level.org.atmosphere = warn
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL9Dialect
+vaadin.compatibilityMode=false
+logging.level.org.atmosphere=warn
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+security.basic.enabled=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+org.atmosphere.websocket.suppressSR356=true
 
 
