--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,11 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>3.1.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.github.legioth</groupId>
+            <artifactId>buttonrenderer</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
