--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
             <artifactId>buttonrenderer</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin</groupId>
+            <artifactId>flow-viritin</artifactId>
+            <version>0.3.5</version>
+        </dependency>
     </dependencies>
 
     <build>
