--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
             <artifactId>flow-viritin</artifactId>
             <version>0.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
 
     <build>
