Added Filtering Functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-server.port=8080
+server.port=${port:8080}
+java.runtime.version=13
 # Ensure application is run in Vaadin 14/npm mode
 vaadin.compatibilityMode=false
 logging.level.org.atmosphere=warn
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-security.basic.enabled=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-org.atmosphere.websocket.suppressSR356=true
-
-
