--- a/pom.xml
+++ b/pom.xml
@@ -170,12 +170,6 @@
             <artifactId>maven-javadoc-plugin</artifactId>
             <version>3.1.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>javax.mail-api</artifactId>
-            <version>1.6.2</version>
-        </dependency>
         <dependency>
             <groupId>org.github.legioth</groupId>
             <artifactId>buttonrenderer</artifactId>
@@ -196,10 +190,11 @@
             <artifactId>mysql-socket-factory-connector-j-8</artifactId>
             <version>1.0.16</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax.activation/javax.activation-api -->
+        <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
         <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>javax.activation-api</artifactId>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
         </dependency>
 
     </dependencies>
